--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
 html {
   --section-background-color: linear-gradient(
     to bottom left,
-    rgba(17, 16, 16, 0.582),
-    rgba(12, 8, 24, 0.904)
+    rgba(28, 141, 161, 0.459),
+    rgba(201, 50, 87, 0.4)
   );
 
   --image-gradient: linear-gradient(
@@ -38,7 +38,7 @@ button:focus {
   width: 100%;
   height: 100%;
   z-index: 999999;
-  background-color: #0c0513;
+  background-color: #d3245e;
   background-image: url(./Assets/pre.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -263,7 +263,8 @@ button:focus {
 .home-section {
   position: relative;
   z-index: -1;
-  background-image: var(--image-gradient), url(./Assets/home-bg.jpg);
+  background-image: var(--image-gradient);
+  /* url(./Assets/home-bg.jpg) */
   background-position: top center;
   background-repeat: no-repeat;
   padding-bottom: 30px !important;
@@ -324,12 +325,14 @@ button:focus {
 }
 
 .home-about-section {
+ /* background-image: var(--image-gradient);*/
   position: relative;
   padding-bottom: 70px !important;
   padding-top: 70px !important;
 }
 
 .home-about-description {
+
   color: rgb(92, 88, 88) !important;
   padding-top: 100px !important;
   padding-bottom: 20px !important;
@@ -612,7 +615,7 @@ button:focus {
   position: relative !important;
   padding-top: 110px !important;
   padding-bottom: 30px !important;
-  background-image: var(--section-background-color) !important;
+ /* background-image: var(--section-background-color) !important;*/
   color: white !important;
 }
 
