--- a/src/assets/css/Main.module.css
+++ b/src/assets/css/Main.module.css
@@ -1,9 +1,8 @@
 .homePage {
   display: flex;
   flex-direction: column;
-  align-items: center;
   padding: 2rem;
-  text-align: center;
+  min-height: calc(100vh - 160px);
 }
 
 .homePage h1 {
