nav bar changes and portfolio dev started

--- a/src/assets/css/Navbar.module.css
+++ b/src/assets/css/Navbar.module.css
@@ -22,6 +22,12 @@
   margin-right: 1rem;
 }
 
+.navLinks {
+  .active a{
+    color:cyan;
+  }
+}
+
 .navLinks a {
   color: #fff;
   text-decoration: none;
