font change and pdf viewer

--- a/src/template/css/tooplate-simply-amazed.css
+++ b/src/template/css/tooplate-simply-amazed.css
@@ -1087,8 +1087,9 @@ figure.effect-julia:hover p {
 .container {
   padding-left: 50px;
   padding-right: 50px;
-  color:#333;
-  font-family:'Franklin Gothic Medium';
+  color:#fff;
+  font-family: "Lobster", serif;
+  font-style :normal;
 }
 .container-2 { max-width: 1250px; }
 
@@ -1102,6 +1103,10 @@ figure.effect-julia:hover p {
     left: 0;
     padding-top: 30px;
   }
+}
+
+.container > p#section_title {
+  font-weight: 400;
 }
 
 .parallax-window { background: transparent; }
